# RAG-Optimization

./: pyproject.toml  requirements.txt
app/: web.py
data/chroma_db_fresh/113a4efe-7589-49e3-8384-151493c9dd25/: index_metadata.pickle
notebook/: chat_model.ipynb  document.ipynb  rag_docs.ipynb
